@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.90 2004/10/10 11:48:29 h_oudejans Exp $
+$Id: ChangeLog,v 1.91 2004/10/11 17:10:23 h_oudejans Exp $
+
+2004-10-16 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* Fixed a problem with inserting a disk while openMSX is running.
+	* Fixed a problem with change focus and diskb (value from
+	   diska was taken instead of diskb).
 
 2004-10-11 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Paths are now saved as soon as the openMSX config dialog
